# rust-snapshot

./: .gitignore  Cargo.toml  README.md  settings.mac.toml  settings.pi.toml  settings.test.toml
crates/rust-ffmpeg-capture/: Cargo.toml  README.md
crates/rust-ffmpeg-capture/src/: lib.rs
crates/rust-pi-capture/: Cargo.toml  README.md
crates/rust-pi-capture/src/: helpers.rs  lib.rs
src/: app.rs  encoding.rs  hardware.rs  lib.rs  resources.rs
src/app/: config.rs  image_logger.rs
src/encoding/: ffmpeg_exporter.rs
src/hardware/: ffmpeg_camera.rs  mock_camera.rs
src/resources/: config_map.rs  lock_file.rs  resource_folder.rs  time_probe.rs
